[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cell2home"
authors = [{name = "Olli Dufva, Krzysztof Polanski", email = "od295@cam.ac.uk"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
readme = {file = "README.md", content-type="text/markdown"}
dynamic = ["version", "description"]
dependencies = [
    "scanpy",
    "muon",
    "mudata"
]

[project.urls]
Home = "https://github.com/Teichlab/cell2home"
